deployments/amazon-web-services/kubernetes/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexa-demo
spec:
  selector:
    matchLabels:
      app: hexa-demo
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: hexa-demo
        tier: frontend
    spec:
      containers:
        - name: hexa-demo
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${AWS_PROJECT_NAME}/hexa:latest
          imagePullPolicy: Always
          command:
            - demo
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8886
